<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_imageDash"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_cam_gray"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/camera_gray_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/image_cam_gray"
                android:text="@string/take_image"
                android:textColor="@color/blue_text_color"
                android:textSize="25sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_camera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/black" />
    </LinearLayout>

    <com.marananmanagement.swipetodismiss.SwipeListView
        android:id="@+id/lv_live_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_imageDash"
        android:divider="@android:color/white"
        android:dividerHeight="2dp"
        android:scrollbars="none"
        swipe:swipeBackView="@+id/back_live_image"
        swipe:swipeFrontView="@+id/front_live_image"
        swipe:swipeMode="right" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:visibility="visible" />


</RelativeLayout>